--- a/index.html
+++ b/index.html
@@ -12,3 +12,19 @@
       </head>
 <body>
   <h1>Daftar penjual</h1>
+
+
+
+  <table class="table" id="daftar-pembeli">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Nama </th>
+        <th scope="col">Alamat</th>
+        <th scope="col">email</th>
+        <th scope="col">no tlp</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
