--- a/ubah-penjual.html
+++ b/ubah-penjual.html
@@ -15,7 +15,7 @@
 
   <form class="mb-3">
     <div class="mb-3">
-      <label class="form-label">Nama Pembeli</label>
+      <label class="form-label">Nama penjual</label>
       <input type="text" class="form-control" id="input-nama">
     </div>
     <div class="mb-3">
