--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Nama pembeli</th>
+        <th scope="col">Nama penjual</th>
         <th ="col">Alamat</th>
-        <th scope="col">No.Tlpn</th>
+        <th scope="col">No.Gmail</th>
         <th scope="col">tombol</th>
       </tr>
     </thead>
