--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <img src="loader.gif" style="width: 15em; display: block" id="loader">
 
-  <a href="forum-data-pembeli.html">tambah data pembeli</a>
+  <a href="from-data-penjual.html">tambah data pembeli</a>
 
   <style>
     table {
