--- a/ubah-penjual.html
+++ b/ubah-penjual.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Data siswa</title>
+  <title>Data penjual</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 
   <form class="mb-3">
     <div class="mb-3">
-      <label class="form-label">Nama Pembeli</label>
+      <label class="form-label">Nama penjual</label>
       <input type="text" class="form-control" id="input-nama">
     </div>
     <div class="mb-3">
@@ -31,7 +31,7 @@
     <button type="submit" class="btn btn-primary" id="tombol-ubah">Ubah</button>
   </form>
 
-  <a class="mt-1" href="index.html">Lihat Daftar Siswa</a>
+  <a class="mt-1" href="index.html">Lihat Daftar penjual</a>
 
   <script type="module">
     import { ambilPembeli, ubahPembeli } from './main.js';
