--- a/ubah-penjual.html
+++ b/ubah-penjual.html
@@ -52,7 +52,7 @@
 
     tombolUbah.addEventListener('click', async function(el) {
       el.preventDefault();
-      await ubahPembeli(docId, elemenNamaPembeli.value, elemenAlamat.value, elemenNoTlpn.value);
+      await ubahPembeli(docId, elemenNamapenjual.value, elemenAlamat.value, elemenNoTlpn.value);
       window.location.href = 'index.html';
     });
   </script>
