--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       });
 
       $('.tombol-hapus').click(async function() {
-        await hapusPembeli($(this).attr('data'));
+        await hapusPenjual($(this).attr('data'));
         location.reload();
       })
 
