--- a/from-data-penjual.html
+++ b/from-data-penjual.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>form produk</title>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>form penjual</title>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   
@@ -13,11 +13,11 @@
 </head>
 
 <body class="m-3">
-   <h1>Form Pembelik</h1>
+   <h1>Form Penjual</h1>
    
      <form class="mb-3">
        <div class="mb-3">
-         <label class="form-label">Nama Pembeli</label>
+         <label class="form-label">Nama Penjual</label>
          <input type="text" class="form-control" id="input-nama">
        </div>
           <div class="mb-3">
