--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="m-3">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> daftar penjual 1</title>
+  <title> daftar Penjual 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Daftar penjual 1</h1>
+  <h1>Daftar Penjual 1</h1>
 
 
 
-  <table class="table" id="daftar-pembeli">
+  <table class="table" id="daftar-Penjual">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Nama penjual</th>
+        <th scope="col">Nama Penjual</th>
         <th ="col">Alamat</th>
         <th scope="col">No.Gmail</th>
         <th scope="col">tombol</th>
@@ -31,7 +31,7 @@
 
   <img src="loader.gif" style="width: 15em; display: block" id="loader">
 
-  <a href="from-data-penjual.html">tambah data penjual</a>
+  <a href="from-data-penjual.html">tambah data Penjual</a>
 
   <style>
     table {
@@ -66,7 +66,7 @@
     import { ambilDaftarPenjual, formatAngka, hapusPenjual } from './main.js';
 
     $(document).ready(async function() {
-      let elemenDaftar = $("#daftar-penjual > tbody");
+      let elemenDaftar = $("#daftar-Penjual > tbody");
       let daftarPenjual = await ambilDaftarPenjual();
       let nomor = 1;
 
