--- a/from-data-penjual.html
+++ b/from-data-penjual.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>form penjual</title>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <title>form Penjual</title>  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   
@@ -31,7 +31,7 @@
        <button type="submit" class="btn btn-primary" id="tombol-tambah">Simpan</button>
      </form>
    
-   <a href="index.html">Daftar penjual Ashelole</a>
+   <a href="index.html">Daftar Penjual Ashelole</a>
    
    <script type="module">
      import { tambahPenjual } from './main.js';
@@ -43,7 +43,7 @@
      
      tombolTambah.addEventListener('click', async function (e) {
        e.preventDefault();
-       await tambahPenjual(elemenNamaPenjual.value, elemenAlamat.value, elemenNoTlpn.value );
+       await tambahPenjualenjual(elemenNamaPenjual.value, elemenAlamat.value, elemenNoTlpn.value );
        window.location.href = 'index.html'
      })
    </script>
