--- a/ubah-penjual.html
+++ b/ubah-penjual.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Data penjual</title>
+  <title>Data Penjual</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 
   <form class="mb-3">
     <div class="mb-3">
-      <label class="form-label">Nama penjual</label>
+      <label class="form-label">Nama Penjual</label>
       <input type="text" class="form-control" id="input-nama">
     </div>
     <div class="mb-3">
@@ -31,28 +31,28 @@
     <button type="submit" class="btn btn-primary" id="tombol-ubah">Ubah</button>
   </form>
 
-  <a class="mt-1" href="index.html">Lihat Daftar penjual</a>
+  <a class="mt-1" href="index.html">Lihat Daftar Penjual</a>
 
   <script type="module">
-    import { ambil penjual, ubahpenjual } from './main.js';
+    import { ambil Penjual, ubahPenjual } from './main.js';
 
     let tombolUbah = document.getElementById('tombol-ubah');
-    let elemenNamapenjual = document.getElementById('input-nama');
+    let elemenNamaPenjual = document.getElementById('input-nama');
     let elemenAlamat = document.getElementById('input-alamat');
     let elemenNoTlpn = document.getElementById('input-noTlpn');
     const queryString = window.location.search
     const parameterURL = new URLSearchParams(queryString);
     const docId = parameterURL.get('docId')
-    const pembeli = await ambilPenjual(docId);
+    const Penjual = await ambilPenjual(docId);
 
-    elemenNamapenjual.value = penjual.nama;
-    elemenAlamat.value = penjual.alamat;
-    elemenNoTlpn.value = penjual.noTlpn;
+    elemenNamaPenjual.value = Penjual.nama;
+    elemenAlamat.value = Penjual.alamat;
+    elemenNoTlpn.value = Penjual.noTlpn;
 
 
     tombolUbah.addEventListener('click', async function(el) {
       el.preventDefault();
-      await ubahPembeli(docId, elemenNamapenjual.value, elemenAlamat.value, elemenNoTlpn.value);
+      await ubahPembeli(docId, elemenNamaPenjual.value, elemenAlamat.value, elemenNoTlpn.value);
       window.location.href = 'index.html';
     });
   </script>
