--- a/from-data-penjual.html
+++ b/from-data-penjual.html
@@ -43,7 +43,7 @@
      
      tombolTambah.addEventListener('click', async function (e) {
        e.preventDefault();
-       await tambahPenjualenjual(elemenNamaPenjual.value, elemenAlamat.value, elemenNoTlpn.value );
+       await tambahPenjual(elemenNamaPenjual.value, elemenAlamat.value, elemenNoTlpn.value );
        window.location.href = 'index.html'
      })
    </script>
